Overhaul vote rebroadcaster

--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -70,6 +70,7 @@ add_executable(
   utility.cpp
   vote_cache.cpp
   vote_processor.cpp
+  vote_rebroadcaster.cpp
   voting.cpp
   wallet.cpp
   wallets.cpp
