Rename `confirming_set` to `cementing_set` (#4875)

--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -16,7 +16,7 @@ add_executable(
   bucketing.cpp
   cli.cpp
   confirmation_solicitor.cpp
-  confirming_set.cpp
+  cementing_set.cpp
   conflicts.cpp
   difficulty.cpp
   distributed_work.cpp
