--- a/.github/workflows/analyzers.yml
+++ b/.github/workflows/analyzers.yml
@@ -24,32 +24,25 @@ jobs:
 
 
   cmake_format:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@13ae5bb136fac2878aff31522b9efb785519f984 #v4.3.0
-        with:
-          python-version: '3.x'
-          architecture: 'x64'
-
       - name: Install cmake-format
-        uses: BSFishy/pip-action@8f2d471d809dc20b6ada98c91910b6ae6243f318
-        with:
-          packages: |
-            cmake-format
+        run: pip install cmake-format  # Simplified to use system Python
 
       - name: Check cmake-format
         run: ci/cmake-format-check.sh
 
 
   code_inspector:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Run code-inspector
         run: ci/code-inspector-check.sh
