--- a/nano/secure/CMakeLists.txt
+++ b/nano/secure/CMakeLists.txt
@@ -26,6 +26,8 @@ add_library(
   ledger.cpp
   ledger_processor.hpp
   ledger_processor.cpp
+  ledger_rollback.hpp
+  ledger_rollback.cpp
   ledger_set_any.hpp
   ledger_set_any.cpp
   ledger_set_confirmed.hpp
